// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`packageJson resource e2e package resource test: PackageJson create 1`] = `
Object {
  "id": "husky",
  "name": "husky",
  "value": "{
  \\"hooks\\": {}
}",
}
`;

exports[`packageJson resource e2e package resource test: PackageJson create plan 1`] = `
Object {
  "currentState": "{
  \\"name\\": \\"test\\",
  \\"scripts\\": {}
}",
  "describe": "Add husky to package.json",
  "diff": "- Original  - 0
+ Modified  + 3

  Object {
+   \\"husky\\": \\"{
+   /\\"hooks/\\": {}
+ }\\",
    \\"name\\": \\"test\\",
    \\"scripts\\": Object {},
  }",
  "id": "husky",
  "name": "husky",
  "newState": "{
  \\"name\\": \\"test\\",
  \\"scripts\\": {},
  \\"husky\\": \\"{/n  /\\"hooks/\\": {}/n}\\"
}",
}
`;

exports[`packageJson resource e2e package resource test: PackageJson destroy 1`] = `undefined`;

exports[`packageJson resource e2e package resource test: PackageJson update 1`] = `
Object {
  "id": "husky",
  "name": "husky",
  "value": "{
  \\"hooks\\": {
    \\"pre-commit\\": \\"lint-staged\\"
  }
}",
}
`;

exports[`packageJson resource e2e package resource test: PackageJson update plan 1`] = `
Object {
  "currentState": "{
  \\"name\\": \\"test\\",
  \\"scripts\\": {},
  \\"husky\\": {
    \\"hooks\\": {}
  }
}",
  "describe": "Add husky to package.json",
  "diff": "- Original  - 3
+ Modified  + 5

  Object {
-   \\"husky\\": Object {
-     \\"hooks\\": Object {},
-   },
+   \\"husky\\": \\"{
+   /\\"hooks/\\": {
+     /\\"pre-commit/\\": /\\"lint-staged/\\"
+   }
+ }\\",
    \\"name\\": \\"test\\",
    \\"scripts\\": Object {},
  }",
  "id": "husky",
  "name": "husky",
  "newState": "{
  \\"name\\": \\"test\\",
  \\"scripts\\": {},
  \\"husky\\": \\"{/n  /\\"hooks/\\": {/n    /\\"pre-commit/\\": /\\"lint-staged/\\"/n  }/n}\\"
}",
}
`;

exports[`packageJson resource handles object values 1`] = `
Object {
  "id": "husky",
  "name": "husky",
  "value": "{
  \\"hooks\\": {}
}",
}
`;
